--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
   },
   "dependencies": {
     "@openzeppelin/contract-loader": "^0.6.1",
+    "body-parser": "^1.19.0",
+    "crypto": "^1.0.1",
+    "eth-crypto": "^1.7.0",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.0",
+    "nodemon": "^2.0.4",
     "web3": "^1.2.11"
   }
 }
