--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "devStart": "nodemon hospital-server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,16 +20,21 @@
   "devDependencies": {
     "@openzeppelin/cli": "^2.8.2",
     "@openzeppelin/contracts": "^3.1.0",
-    "ganache-cli": "^6.10.1"
+    "ganache-cli": "^6.10.1",
+    "nodemon": "^2.0.4"
   },
   "dependencies": {
     "@openzeppelin/contract-loader": "^0.6.1",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "crypto": "^1.0.1",
+    "dotenv": "^8.2.0",
     "eth-crypto": "^1.7.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "https": "^1.0.0",
+    "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.0",
-    "nodemon": "^2.0.4",
     "web3": "^1.2.11"
   }
 }
