--- a/web-client/package.json
+++ b/web-client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@openzeppelin/contract-loader": "^0.6.1",
+    "@types/react-select": "^3.0.19",
     "bootstrap": "3.3.7",
     "chartist": "0.10.1",
     "node-sass": "4.12.0",
@@ -16,6 +17,7 @@
     "react-router": "5.0.0",
     "react-router-dom": "5.0.0",
     "react-scripts": "3.0.0",
+    "react-select": "^3.1.0",
     "react-toggle": "4.0.2",
     "web3": "^1.2.11"
   },
